Image framing fix behind buttons.

--- a/stylesheets/components/main/page-intro.css
+++ b/stylesheets/components/main/page-intro.css
@@ -12,7 +12,7 @@
 }
 
 .booking-section__image-container > img {
-  height: 100%;
+  height: 480px;
   width: 100%;
   object-fit: cover;
   object-position: top;
